crates/ty_server/tests/e2e/snapshots/e2e__configuration__invalid_configuration_file-2.snap
---
source: crates/ty_server/tests/e2e/configuration.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 11
        },
        "end": {
          "line": 1,
          "character": 12
        }
      },
      "severity": 1,
      "code": "unresolved-reference",
      "codeDescription": {
        "href": "https://ty.dev/rules#unresolved-reference"
      },
      "source": "ty",
      "message": "Name `a` used when not defined/ninfo: rule `unresolved-reference` is enabled by default"
    }
  ]
}
